# hf-py-sdk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-policy.yml  release.yml
codegen/: ariadne.toml  generate.py
codegen/include/: _client.py
demo/: main.py
examples/: app.py  requirements.txt
